header slide-menu コード追加

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
             <li>Home</li>
             <li>About</li>
             <li>Category</li>
-            <li></li>
+            <p>- </p>
+            <p>- </p>
+            <p>- </p>
+            <p>- </p>
+            <p>- </p>
+            <p>- option</p>
+            <p>- seasonal/期間限定</p>
+            <li>News</li>
+            <li>Contact</li>
+            <img src="images/shopping.png">
+            <li>SEARCH</li>
+            <img src="images/resarching.png">
+
+            <p class="numbers">TEL - 042-xxx-xxxx</p>
           </ul>
     </header>
     <wrapper>
