html：誤字・脱字の修正、css余白・画像サイズの修正

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="resarch"><img src="images/resarching.png" alt="" width="15px"></div>
         <div class="cart"><img src="images/shopping.png" alt="" width="15px"></div>
         </div>
-        
+
         <div class="header-area">
           <div class="hamburger">
             <span></span>
@@ -76,7 +76,7 @@
         </div>
         </div>
   
-        <h1>PROUDUCTS</h1>
+        <h1>PRODUCTS</h1>
         <p>取り扱い商品一覧</p>
         <div class="products">
         <div class="photo-list" id="">
@@ -258,7 +258,7 @@
             <a class="arrow"><p class="boreder"></p>mei dried flower</a>
             <a class="arrow"><p class="boreder"></p>mei</a>
             <a class="arrow"><p class="boreder"></p>luna</a>
-            <p class="boreder"></p><a class="arrow">option</a>
+            <a class="arrow"><p class="boreder"></p>optio/期間限定</a>
         </div>
         <div class="information">
             <div class="story">eMMaにまつわるSTORY</div>
