body:レスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -308,14 +308,14 @@
                         01.31
                         </div>
                         <div class="border-height"></div>
-                <p>BASE 20％割引クーポン　明日まで</p></li>
+                <p>20％割引クーポン　明日まで</p></li>
                 <li class="news-contents">
                     <div class="date"> 
                         2023<br>
                         01.31
                     </div>
                         <div class="border-height"></div>
-                <p>10周年記念</p></li>
+                <p>10周年記念 割引クーポン配布中『最大30％off』</p></li>
                 <li class="news-contents">
                     <div class="date"> 
                         2023<br>
