--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         <img src="images/top.jpeg" alt="">
         <div class="title"><p>花が叶える、夢もある</p></div>
         <div class="Eng-ver">There are dreams for flowers to come true.</div>
+        <div class="scroll">scroll </div><div class="scroll-line"></div>
     </div>
+    
         <div class="about">
         <img src="images/sub1.jpeg" alt="" >
     <div class="mainOutline">
@@ -364,17 +366,20 @@
     </body>
     
     <footer>
+        <div class="footer-block">
         <div class="logo-name">
             <img src="images/logoM.png" alt="">eMMa</div>
            <div class="policy">
             <a>プライバシーポリシー</a>
             <a>特定商品取引法に基づく表記</a>
         </div>
+        <div class="SNS-block">
             <div class="SNS">
             <img src="images/facebook.png" width="25px" alt="">
             <img src="images/instagram.jpeg" width="25px" alt="">
         </div>
             <div class="copyright">©︎2023 eMMa Ltd.</div>
+        </div>
         </div>
     </footer>
 </html>
