--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </div>
     <div class="main">
         <img src="images/top.jpeg" alt="">
-        <div class="title"><p class="fadeIn">花が叶える、夢もある</p></div>
-        <div class="Eng-ver"><p class="fadeIn">There are dreams for flowers to come true.</p></div>
+        <div class="title"><p class="fadeIn">日常に、彩りを。</p></div>
+        <div class="Eng-ver"><p class="fadeIn">Daily life with colorful.</p></div>
         <div class="scroll">scroll</div>
         <div class="scroll-line"></div>
     </div>
@@ -69,9 +69,10 @@
     </div>
     <div class="sentence">
         <p class="fadeIn">
-            豊かな暮らしを育む一端として、“長く愛される花の文化を作りたい”という想いから多くの可能性を探り、
-            レジンデコールを作り出しました。消費される世の中だからこそ、花から生まれるコミュニケーションや豊かな生活を大事にしてほしい。
-            その時間が長くあり続けてほしい。そんな想いを込めて、花にまつわる文化を作り出しています。
+            日常に彩りを取り入れて”快適な空間を提供したい”という想いからeMMaは誕生しました。
+            お家時間が増えたご時世で、少しでも自然を感じて頂きたい。リラックスして頂きたい。
+            という想いで職人が一つ一つ丁寧に制作しています。
+            花を通じて実りのあるライフスタイルの手助けになって欲しいです。
         </p>
     </div>
             <div class="and-more"><p class="fadeIn">and more...</p></div>
@@ -299,56 +300,56 @@
                     <div class="date"> 
                         <p class="fadeIn">
                         2023<br>
-                        01.31
+                        06.25
                         </p>
                         </div>
                          <div class="border-height"><p class="fadeIn"></p></div>
-                         <p class="fadeIn"><a>eMMa OPEN DAYのお知らせ</a></p></li>
+                         <p class="fadeIn"><a>1周年記念 割引クーポン配布中『最大３0％off』</a></p></li>
                 <li class="news-contents">
                     <div class="date"> 
                         <p class="fadeIn">
                         2023<br>
-                        01.31
+                        03.31
                         </p>
                         </div>
                         <div class="border-height"><p class="fadeIn"></p></div>
-                        <p class="fadeIn"><a>”冬のSALE”のお知らせ</a></p></li>
+                        <p class="fadeIn"><a>”春のSALE”のお知らせ</a></p></li>
                 <li class="news-contents">
                     <div class="date">
                         <p class="fadeIn">
                         2023<br>
-                        01.31
+                        12.20
                         </p>
                         </div>
                         <div class="border-height"><p class="fadeIn"></p></div>
-                        <p class="fadeIn"><a>20％割引クーポン　明日まで</a></p></li>
+                        <p class="fadeIn"><a>クリスマスフェアクーポン　明日まで</a></p></li>
                 <li class="news-contents">
                     <div class="date"> 
                         <p class="fadeIn">
-                        2023<br>
-                        01.31
-                        </p>
-                    </div>
-                        <div class="border-height"><p class="fadeIn"></p></div>
-                        <p class="fadeIn"><a>10周年記念 割引クーポン配布中『最大３0％off』</a></p></li>
-                <li class="news-contents">
-                    <div class="date"> 
-                        <p class="fadeIn">
-                        2023<br>
-                        01.31
+                        2022<br>
+                        11.01
                         </p>
                         </div>
                         <div class="border-height"><p class="fadeIn"></p></div>
-                        <p class="fadeIn"><a>"しめ縄かざり"の予約販売がスタートしました🎍</a></p></li>
+                        <p class="fadeIn"><a>リースの予約販売がスタートしました！</a></p></li>
                 <li class="news-contents">
                     <div class="date"> 
                         <p class="fadeIn">
-                        2023<br>
-                        01.31
+                        2022<br>
+                        07.07
                         </p>
                         </div>
                         <div class="border-height"><p class="fadeIn"></p></div>
-                        <p class="fadeIn"><a>クリスマスリース　販売スタートのお知らせ</a></p></li>
+                        <p class="fadeIn"><a>サマーフラワー　販売スタートのお知らせ</a></p></li>
+                <li class="news-contents">
+                        <div class="date"> 
+                        <p class="fadeIn">
+                        2022<br>
+                        06.25
+                        </p>
+                        </div>
+                        <div class="border-height"><p class="fadeIn"></p></div>
+                        <p class="fadeIn"><a>eMMa OPEN DAYのお知らせ</a></p></li>
             </div>
             <div class="andMore"><p class="fadeIn">and more...</p></div>
             <div class="tops">
